# league-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  matrix-fix.md  release-plz.toml
crates/league-mod/: Cargo.toml
crates/league-mod/src/: fantome.rs  main.rs
crates/league-mod/src/commands/: extract.rs  fantome_to_project.rs  info.rs  init.rs  mod.rs  pack.rs
crates/league-mod/src/utils/: mod.rs  modpkg.rs
crates/league-modpkg/: Cargo.toml
crates/league-modpkg/src/: builder.rs  chunk.rs  decoder.rs  error.rs  extractor.rs  lib.rs  license.rs  metadata.rs  pkg_utils.rs  read.rs  utils.rs
crates/league-toolkit/: CHANGELOG.md  Cargo.toml
crates/league-toolkit/src/: lib.rs
crates/league-toolkit/src/core/: mod.rs
crates/league-toolkit/src/league_file/: kind.rs  mod.rs  pattern.rs
crates/league-toolkit/src/util/: hash.rs  int.rs  league_file.rs  mod.rs  reader.rs  writer.rs
crates/league-toolkit/tests/: meta.rs  mod.rs  skinned.rs  wad.rs
crates/league-toolkit/tests/meta/: mod.rs
crates/league-toolkit/tests/skeleton/: mod.rs
crates/league-toolkit/tests/skinned/: mod.rs
crates/league-toolkit/tests/snapshots/: meta__read.snap  wad__read.snap
crates/league-toolkit/tests/wads/: UI.en_US.wad.client.v3-4
crates/ltk_anim/: CHANGELOG.md  Cargo.toml
crates/ltk_anim/src/: lib.rs  quantized.rs
crates/ltk_anim/src/asset/: error.rs  error_metric.rs  mod.rs  traits.rs
crates/ltk_anim/src/joint/: builder.rs  read.rs  write.rs
crates/ltk_anim/src/rig/: builder.rs  mod.rs  read.rs  write.rs
crates/ltk_anim/tests/: parse_samples.rs
crates/ltk_file/: CHANGELOG.md  Cargo.toml
crates/ltk_file/src/: kind.rs  pattern.rs
crates/ltk_hash/: CHANGELOG.md  Cargo.toml
crates/ltk_hash/src/: impls.rs  lib.rs  sdbm.rs  xxhash.rs
crates/ltk_hash/src/impls/: elf.rs  fnv1a.rs
crates/ltk_inibin/: Cargo.toml  README.md
crates/ltk_inibin/examples/: create_inibin.rs  inspect_inibin.rs  modify_inibin.rs  read_inibin.rs  round_trip.rs
crates/ltk_inibin/src/: error.rs  file.rs  lib.rs  reader.rs  section.rs  types.rs  value.rs  value_flags.rs  value_kind.rs  writer.rs
crates/ltk_inibin/tests/: round_trip.rs
crates/ltk_inibin/tests/fixtures/: slime_environmentminion_idle.troybin
crates/ltk_io_ext/: CHANGELOG.md  Cargo.toml
crates/ltk_io_ext/src/: lib.rs  reader.rs  writer.rs
crates/ltk_mapgeo/: CHANGELOG.md  Cargo.toml
crates/ltk_mapgeo/src/: asset.rs  channel.rs  error.rs  lib.rs  mesh.rs  reflector.rs  shader_override.rs  submesh.rs  visibility.rs
crates/ltk_mapgeo/src/read/: channel.rs  mesh.rs  mod.rs  reflector.rs  scene_graph.rs  submesh.rs  version.rs
crates/ltk_mapgeo/src/scene_graph/: bucket.rs  bucketed_geometry.rs  build.rs  mod.rs
crates/ltk_mapgeo/tests/: build_bucketed_geometry.rs  parse_brawl.rs  parse_minimal.rs
crates/ltk_mesh/: CHANGELOG.md  Cargo.toml
crates/ltk_mesh/src/: error.rs  lib.rs
crates/ltk_mesh/src/mem/: index.rs  vertex_buffer.rs  vertex_buffer_accessor.rs  vertex_buffer_description.rs  vertex_element.rs
crates/ltk_mesh/src/skinned/: mod.rs  range.rs  read.rs  vertex.rs  write.rs
crates/ltk_mesh/src/static/: face.rs  mod.rs  read.rs  write.rs
crates/ltk_meta/: CHANGELOG.md  Cargo.toml
crates/ltk_meta/src/: error.rs  header.rs  lazy.rs  lib.rs  property.rs  traits.rs  tree.rs
crates/ltk_meta/src/bin_tree/: mod.rs  object.rs  read.rs  tests.rs  write.rs
crates/ltk_meta/src/property/: enum.rs  kind.rs  mod.rs  value.rs  values.rs
crates/ltk_meta/src/tree/: builder.rs  object.rs  read.rs  tests.rs  write.rs
crates/ltk_meta/tests/: meta.rs
crates/ltk_meta/tests/snapshots/: meta__read.snap
crates/ltk_primitives/: CHANGELOG.md  Cargo.toml
crates/ltk_primitives/src/: color.rs  lib.rs  prefix_string.rs
crates/ltk_ritobin/: CHANGELOG.md  Cargo.toml  README.md
crates/ltk_ritobin/benches/: e2e.rs  parse.rs  print.rs
crates/ltk_ritobin/examples/: bin_to_rito.rs  parse.rs  rito_fmt.rs  rito_to_bin.rs
crates/ltk_ritobin/samples/: aatrox.bak.rito  aatrox.rito  azirultsoldier.fmt.rito  azirultsoldier.rito  big.rito  cac479.rito  skin0.py  skin0.rito  skin38.rito  test.rito  test2.rito  test3.rito  test5.rito  zaahen.rito
crates/ltk_ritobin/src/: cst.rs  error.rs  hashes.rs  lib.rs  parse.rs  parser.rs  print.rs  typecheck.rs  types.rs  writer.rs
crates/ltk_ritobin/src/cst/: builder.rs  flat_errors.rs  ids.rs  tree.rs  visitor.rs
crates/ltk_ritobin/src/literals/: block.rs  mod.rs  numeric.rs
crates/ltk_ritobin/src/parse/: cst.rs  error.rs  impls.rs  mod.rs  parser.rs  real.rs  span.rs  statement.rs  tokenizer.rs
crates/ltk_ritobin/src/parser/: mod.rs  real.rs  tokenizer.rs
crates/ltk_ritobin/src/print/: command.rs  config.rs  printers.rs  visitor.rs
crates/ltk_ritobin/src/typecheck/: collect.rs  diagnostics.rs  ir.rs  listlikes.rs  name_ext.rs  resolve.rs  state.rs  trace.rs  vecmath.rs  visitor.rs  walk.rs
crates/ltk_ritobin/src/validate/: error.rs  mod.rs
crates/ltk_ritobin/tests/: parse_sample.rs
crates/ltk_ritobin/tests/snapshots/: parse_sample__parse_containers.snap  parse_sample__parse_hex_property_names.snap  parse_sample__parse_nested_embeds.snap  parse_sample__parse_primitives.snap  parse_sample__parse_sample.snap  (+3 more)
crates/ltk_rst/: CHANGELOG.md  Cargo.toml
crates/ltk_rst/src/: error.rs  hash.rs  lib.rs  rst.rs  version.rs
crates/ltk_rst/tests/: parse_files.rs
crates/ltk_shader/: CHANGELOG.md  Cargo.toml
crates/ltk_shader/src/: defines.rs  error.rs  lib.rs  loader.rs  toc.rs
crates/ltk_texture/: CHANGELOG.md  Cargo.toml  README.md
crates/ltk_texture/src/: dds.rs  format.rs  lib.rs  read.rs
crates/ltk_troybin/: Cargo.toml
crates/ltk_troybin/src/: dictionary.rs  error.rs  hash.rs  lib.rs  reader.rs  text.rs  types.rs  writer.rs
crates/ltk_troybin/tests/: round_trip.rs
crates/ltk_wad/: CHANGELOG.md  Cargo.toml
crates/ltk_wad/examples/: dump_wad.rs
crates/ltk_wad/src/: builder.rs  chunk.rs  chunks.rs  decoder.rs  error.rs  extractor.rs  file_ext.rs  lib.rs  wad.rs
crates/ltk_wad/tests/: mount_samples.rs
(+210 files in other folders)
