[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
byteorder = "1.5.0"
bitflags = "2.5.0"
itertools = "0.14.0"
thiserror = "1.0.60"
num_enum = "0.7.2"
memchr = "2.7.2"

xxhash-rust = { version = "0.8.15", features = ["xxh64", "xxh3"] }
zstd = { version = "0.13", default-features = false }
ruzstd = { version = "0.8" }

flate2 = "1.0.30"

serde = { version = "1.0.204", features = ["derive"] }
