[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
log = "0.4.21"
byteorder = "1.5.0"
bitflags = "2.5.0"
itertools = "0.14.0"
thiserror = "1.0.60"
lazy_static = "1.5.0"
num_enum = "0.7.2"
enum_dispatch = "0.3.13"
memchr = "2.7.2"
miette = "7.2.0"

glam = { version = "0.27.0", features = ["glam-assert"] }

xxhash-rust = { version = "0.8.15", features = ["xxh64", "xxh3"] }
flate2 = "1.0.30"
zstd = { version = "0.13", default-features = false }
ruzstd = { version = "0.8" }

paste = "1.0.15"

serde = { version = "1.0.204", features = ["derive"] }

approx = "0.5.1"
insta = { version = "1.39.0", features = ["ron"] }
