[package]
name = "league-mod"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4.3"
thiserror = "1.0.49"
num_enum = "0.7.0"
flate2 = "1.0"
zstd = "0.12.4"
memchr = "2.6.4"
xxhash-rust = { version = "0.8.7", features = ["xxh3", "xxh64"] }
walkdir = "2.4.0"
