[package]
name = "league-mod"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
toml = "0.8.19"
mod-project = { path = "../mod-project" }
regex = "1.11.1"
serde_json = "1.0"
colored = "2"
inquire = "0.7.5"
slug = "0.1.6"
league-modpkg = { path = "../league-modpkg" }
glob = "0.3.2"
semver = "1.0.25"
binrw = "0.14.1"
