[package]
name = "league-modpkg"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.60"
byteorder = "1.5.0"
io-ext = { path = "../io-ext" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
twox-hash = { version = "2.0.1", features = ["xxhash64"] }
binrw = "0.14.1"
itertools = "0.14.0"
