[package]
name = "league-modpkg"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.60"
byteorder = "1.5.0"
io-ext = { path = "../io-ext" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
binrw = "0.14.1"
itertools = "0.14.0"
proptest = "1.6.0"
zstd = "0.13"
tempfile = "3.17.1"

[dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh3", "xxh64"]

[dev-dependencies]
proptest-derive = "0.5.1"
