[package]
name = "league-toolkit"
version = "0.2.21"
edition = "2021"

description = "Toolkit library for serializing and editing various League of Legends formats"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lints]
workspace = true

# wad, file, meta have serde
[features]
default = [
    "anim",
    "file",
    "mesh",
    "meta",
    "primitives",
    "texture",
    "wad",
    "hash",
]

serde = ["ltk_wad/serde", "ltk_file/serde", "ltk_meta/serde", "ltk_rst/serde"]

anim = ["dep:ltk_anim"]
file = ["dep:ltk_file"]
mesh = ["dep:ltk_mesh"]
meta = ["dep:ltk_meta"]
primitives = ["dep:ltk_primitives"]
texture = ["dep:ltk_texture"]
wad = ["dep:ltk_wad"]
hash = ["dep:ltk_hash"]
rst = ["dep:ltk_rst"]

[dependencies]
ltk_anim = { version = "0.3.4", path = "../ltk_anim", optional = true }
ltk_file = { version = "0.2.9", path = "../ltk_file", optional = true }
ltk_mesh = { version = "0.4.3", path = "../ltk_mesh", optional = true }
ltk_meta = { version = "0.5.1", path = "../ltk_meta", optional = true }
ltk_primitives = { version = "0.3.4", path = "../ltk_primitives", optional = true }
ltk_texture = { version = "0.5.1", path = "../ltk_texture", optional = true }
ltk_wad = { version = "0.2.15", path = "../ltk_wad", optional = true }
ltk_hash = { version = "0.2.6", path = "../ltk_hash", optional = true }
ltk_rst = { version = "0.1.0", path = "../ltk_rst", optional = true }
