[package]
name = "league-toolkit"
version = "0.2.24"
edition = "2021"

description = "Toolkit library for serializing and editing various League of Legends formats"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lints]
workspace = true

# wad, file, meta have serde
[features]
default = [
    "anim",
    "file",
    "mesh",
    "meta",
    "primitives",
    "texture",
    "wad",
    "hash",
]

serde = ["ltk_wad/serde", "ltk_file/serde", "ltk_meta/serde", "ltk_rst/serde"]

anim = ["dep:ltk_anim"]
file = ["dep:ltk_file"]
mesh = ["dep:ltk_mesh"]
meta = ["dep:ltk_meta"]
primitives = ["dep:ltk_primitives"]
texture = ["dep:ltk_texture"]
wad = ["dep:ltk_wad"]
hash = ["dep:ltk_hash"]
rst = ["dep:ltk_rst"]

[dependencies]
ltk_anim = { version = "0.3.6", path = "../ltk_anim", optional = true }
ltk_file = { version = "0.2.10", path = "../ltk_file", optional = true }
ltk_mesh = { version = "0.4.4", path = "../ltk_mesh", optional = true }
ltk_meta = { version = "0.6.1", path = "../ltk_meta", optional = true }
ltk_primitives = { version = "0.3.5", path = "../ltk_primitives", optional = true }
ltk_texture = { version = "0.6.0", path = "../ltk_texture", optional = true }
ltk_wad = { version = "0.3.1", path = "../ltk_wad", optional = true }
ltk_hash = { version = "0.4.0", path = "../ltk_hash", optional = true }
ltk_rst = { version = "0.2.1", path = "../ltk_rst", optional = true }

[dev-dependencies]
image = { version = "0.25.2", default-features = false }
