[package]
name = "ltk_anim"
version = "0.1.0"
edition = "2021"
description = "Animation formats support for League Toolkit"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
thiserror = { workspace = true }
byteorder = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }

glam = { workspace = true }

ltk_hash = { path = "../ltk_hash/" }
ltk_io_ext = { path = "../ltk_io_ext" }

[dev-dependencies]
approx = { workspace = true }
insta = { workspace = true }
