[package]
name = "ltk_anim"
version = "0.2.3"
edition = "2021"
description = "Animation formats support for League Toolkit"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
thiserror = { workspace = true }
byteorder = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }

glam = { workspace = true }

ltk_hash = { version = "0.2.2", path = "../ltk_hash/" }
ltk_io_ext = { version = "0.3.1", path = "../ltk_io_ext" }

[dev-dependencies]
approx = { workspace = true }
insta = { workspace = true }
