[package]
name = "ltk_file"
version = "0.2.1"
edition = "2021"
description = "Core IO and file abstractions for League Toolkit"
license = "AGPL-3.0-only"
readme = "../../README.md"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
strum = { version = "0.27.2", features = ["derive"] }
