[package]
name = "ltk_file"
version = "0.2.10"
edition = "2021"
description = "Core IO and file abstractions for League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lints]
workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
strum = { version = "0.27.2", features = ["derive"] }
