[package]
name = "ltk_hash"
version = "0.4.0"
edition = "2021"
description = "Hashes implementation used by League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[features]
serde = ["dep:serde"]

[lints]
workspace = true

[dependencies]
xxhash-rust.workspace = true
byteorder.workspace = true

serde = { workspace = true, optional = true }
