[package]
name = "ltk_io_ext"
version = "0.3.3"
edition = "2021"
description = "I/O extensions used by League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[dependencies]
thiserror = "1.0.60"
ltk_primitives = { version = "0.2.4", path = "../ltk_primitives" }
byteorder = "1.5.0"
glam = { version = "0.27.0", features = ["glam-assert"] }
