[package]
name = "ltk_io_ext"
version = "0.4.4"
edition = "2021"
description = "I/O extensions used by League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
thiserror = "1.0.60"
ltk_primitives = { version = "0.3.5", path = "../ltk_primitives" }
byteorder = "1.5.0"
glam = { version = "0.27.0", features = ["glam-assert"] }
