[package]
name = "ltk_mapgeo"
version = "0.1.0"
edition = "2021"
description = "Map Geometry (.mapgeo) parsing for League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[dependencies]
byteorder = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }

ltk_io_ext = { version = "0.4.0", path = "../ltk_io_ext" }
ltk_primitives = { version = "0.3.1", path = "../ltk_primitives" }
ltk_mesh = { version = "0.4.0", path = "../ltk_mesh" }

[dev-dependencies]
