[package]
name = "ltk_mesh"
version = "0.2.0"
edition = "2021"
description = "Mesh parsing and structures for League Toolkit"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
byteorder = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }

glam = { workspace = true }

ltk_io_ext = { version = "0.2.0", path = "../ltk_io_ext" }
ltk_primitives = { version = "0.2.0", path = "../ltk_primitives" }
