[package]
name = "ltk_meta"
version = "0.6.1"
edition = "2021"
description = "Metadata formats and utilities for League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lints]
workspace = true

[features]
serde = [
  "dep:serde",
  "ltk_primitives/serde",
  "ltk_hash/serde",
  "glam/serde",
  "indexmap/serde",
]

[dependencies]
log = { workspace = true }
num_enum = { workspace = true }
byteorder = { workspace = true }
enum_dispatch = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

glam = { workspace = true }
paste = { workspace = true }
indexmap = { workspace = true }

serde = { workspace = true, optional = true }

ltk_io_ext = { version = "0.4.4", path = "../ltk_io_ext" }
ltk_primitives = { version = "0.3.5", path = "../ltk_primitives" }
ltk_hash = { version = "0.4.0", path = "../ltk_hash" }

[dev-dependencies]
approx = { workspace = true }
insta = { workspace = true }

ltk_meta = { path = ".", features = ["serde"] }
