[package]
name = "ltk_primitives"
version = "0.2.1"
edition = "2021"
description = "Primitive types and helpers for League Toolkit"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
thiserror = "1.0.60"
glam = { version = "0.27.0", features = ["glam-assert"] }
byteorder = "1.5.0"
serde = { version = "1.0.204", features = ["derive"], optional = true }
