[package]
name = "ltk_ritobin"
version = "0.5.0"
edition = "2021"
description = "Ritobin text format parser and writer for League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lib]
bench = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "print"
harness = false

[[bench]]
name = "e2e"
harness = false

[lints]
workspace = true

[features]
default = []
debug = []
serde = ["dep:serde", "ltk_meta/serde"]

[dependencies]
nom = "7.1"
nom_locate = "4.2"
thiserror = { workspace = true }
miette = { workspace = true }
indexmap = { workspace = true }

smallvec = "1"

glam = { workspace = true }
xxhash-rust = { workspace = true }

ltk_meta = { version = "0.6.1", path = "../ltk_meta" }
ltk_hash = { version = "0.4.0", path = "../ltk_hash" }
ltk_primitives = { version = "0.3.5", path = "../ltk_primitives" }

serde = { workspace = true, optional = true }
salsa = "0.22.0"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
serde.workspace = true
criterion.workspace = true
ltk_ritobin = { path = ".", features = ["serde"] }

