[package]
name = "ltk_shader"
version = "0.1.11"
edition = "2021"
description = "Shader loading and parsing for League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
ltk_io_ext = { version = "0.4.3", path = "../ltk_io_ext" }
ltk_wad = { version = "0.2.15", path = "../ltk_wad" }
ltk_hash = { version = "0.2.6", path = "../ltk_hash" }
byteorder = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
itertools = { workspace = true }
