[package]
name = "ltk_shader"
version = "0.1.12"
edition = "2021"
description = "Shader loading and parsing for League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
ltk_io_ext = { version = "0.4.4", path = "../ltk_io_ext" }
ltk_wad = { version = "0.2.16", path = "../ltk_wad" }
ltk_hash = { version = "0.2.7", path = "../ltk_hash" }
byteorder = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
itertools = { workspace = true }
