[package]
name = "ltk_texture"
version = "0.1.0"
edition = "2021"
description = "Texture decoding/encoding utilities for League Toolkit"
license = "AGPL-3.0-only"
readme = "../../README.md"

[dependencies]
bitflags = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
num_enum = { workspace = true }

image = { version = "0.25.2", default-features = false, features = ["dds"] }
ddsfile = "0.5.2"
image_dds = { version = "0.6.0", default-features = false, features = [
    "ddsfile",
    "image",
] }

texture2ddecoder = "0.1.2"

[dev-dependencies]
image = { version = "0.25.2", default-features = false, features = [
    "dds",
    "png",
] }
