[package]
name = "ltk_wad"
version = "0.1.0"
edition = "2021"
description = "WAD archive reading/writing for League Toolkit"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[features]
default = ["zstd"]

serde = ["dep:serde"]
rust_backend = ["flate2/rust_backend", "ruzstd"]

zstd = ["dep:zstd"]
ruzstd = ["dep:ruzstd"]

[dependencies]
thiserror = { workspace = true }
itertools = { workspace = true }
num_enum = { workspace = true }
memchr = { workspace = true }

byteorder = { workspace = true }

xxhash-rust = { workspace = true }
zstd = { workspace = true, optional = true }
ruzstd = { workspace = true, optional = true }
flate2 = { workspace = true }

serde = { workspace = true, optional = true }

ltk_io_ext = { path = "../ltk_io_ext" }
ltk_file = { path = "../ltk_file" }
